==> chungmin23/103_mp3/Src/vs1003.c <==
#include "vs1003.h"

void VS1003_SPI_Init(void)
{
	  __HAL_RCC_SPI2_CLK_ENABLE();

	  hspi2.Instance = SPI2;
	  hspi2.Init.Mode = SPI_MODE_MASTER;
	  hspi2.Init.Direction = SPI_DIRECTION_2LINES;
	  hspi2.Init.DataSize = SPI_DATASIZE_8BIT;
	  hspi2.Init.CLKPolarity = SPI_POLARITY_HIGH;
	  hspi2.Init.CLKPhase = SPI_PHASE_2EDGE;
	  hspi2.Init.NSS = SPI_NSS_SOFT;
	  hspi2.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_8;
	  hspi2.Init.FirstBit = SPI_FIRSTBIT_MSB;
	  hspi2.Init.TIMode = SPI_TIMODE_DISABLE;
	  hspi2.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
	  hspi2.Init.CRCPolynomial = 0;
	  if (HAL_SPI_Init(&hspi2) != HAL_OK)
	  {
		printf("aa\r\n");
		Error_Handler(__FILE__,__LINE__);
	  }
}

static void VS1003_SPI_SetSpeed( uint8_t SpeedSet)
{
	  hspi2.Instance = SPI2;
	  hspi2.Init.Mode = SPI_MODE_MASTER;
	  hspi2.Init.Direction = SPI_DIRECTION_2LINES;
	  hspi2.Init.DataSize = SPI_DATASIZE_8BIT;
	  hspi2.Init.CLKPolarity = SPI_POLARITY_HIGH;
	  hspi2.Init.CLKPhase = SPI_PHASE_2EDGE;
	  hspi2.Init.NSS = SPI_NSS_SOFT;
	  hspi2.Init.FirstBit = SPI_FIRSTBIT_MSB;
	  hspi2.Init.TIMode = SPI_TIMODE_DISABLE;
	  hspi2.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
	  hspi2.Init.CRCPolynomial = 0;

  if( SpeedSet == SPI_SPEED_LOW )
  {
      hspi2.Init.BaudRatePrescaler =  SPI_BAUDRATEPRESCALER_128;
  }
  else 
  {
	  hspi2.Init.BaudRatePrescaler =  SPI_BAUDRATEPRESCALER_8;
  }
  if (HAL_SPI_Init(&hspi2) != HAL_OK)
  {
	  printf("bb\r\n");
    Error_Handler(__FILE__,__LINE__);
  }
}

static uint16_t VS1003_SPI_ReadWriteByte( uint16_t TxData )
{
  /* Loop while DR register in not emplty */
  uint8_t RxData;
  HAL_SPI_TransmitReceive(&hspi2,(uint8_t*)&TxData,&RxData,1,10);
  return RxData;
}

void VS1003_Init(void)
{		  
	GPIO_InitTypeDef GPIO_InitStruct;


//	  __HAL_RCC_GPIOA_CLK_ENABLE();
//	  __HAL_RCC_GPIOB_CLK_ENABLE();
//	 // __HAL_RCC_GPIOC_CLK_ENABLE();
//
//
//	  /*Configure GPIO pins : PA4 PA6 */
//	  GPIO_InitStruct.Pin = GPIO_PIN_9;
//	  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
//	  GPIO_InitStruct.Pull = GPIO_NOPULL;
//	  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
//	  HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);
//
//	  /*Configure GPIO pin : PC7 */
//	  GPIO_InitStruct.Pin = GPIO_PIN_4;
//	  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
//
//	  GPIO_InitStruct.Pin = GPIO_PIN_6;
//	  HAL_GPIO_Init(GPIOA, &GPIO_InitStruct);
//
//	  /*Configure GPIO pin : PB9 */
//	  GPIO_InitStruct.Pin = GPIO_PIN_7;
//	  GPIO_InitStruct.Mode = GPIO_MODE_INPUT;
//	  HAL_GPIO_Init(GPIOC, &GPIO_InitStruct);
//
//	  GPIO_InitStruct.Pin = GPIO_PIN_10 | GPIO_PIN_14 | GPIO_PIN_15;
//	  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
//	  GPIO_InitStruct.Pull = GPIO_NOPULL;
//	  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
//	  GPIO_InitStruct.Alternate = GPIO_AF5_SPI2;
//	  HAL_GPIO_Init(GPIOB, &GPIO_InitStruct);

	  MP3_RESET(0);
	  HAL_Delay(1);
	  MP3_RESET(1);

	  MP3_DCS(1);
	  MP3_CCS(1);

	  VS1003_SPI_Init();

}

void VS1003_SoftReset(void)
{
   uint8_t retry; 	
   			   
   while(  MP3_DREQ ==0 );
   VS1003_SPI_ReadWriteByte(0xff);
   retry = 0;
   while( VS1003_ReadReg(SPI_MODE) != 0x0804 )
   {

	   VS1003_WriteReg(SPI_MODE,0x0804);
	   HAL_Delay(2);
	   if( retry++ > 100 )
	   { 
	      break;
	   }
   }	 	

   while(  MP3_DREQ ==0 );

   retry = 0;

   while( VS1003_ReadReg(SPI_CLOCKF) != 0x9800 )
   {
	   VS1003_WriteReg(SPI_CLOCKF,0x9800);
	   if( retry++ > 100 )
	   { 
	      break; 
	   }
   }		   
   retry = 0;

   while( VS1003_ReadReg(SPI_AUDATA) != 0xBB81 )
   {
	   VS1003_WriteReg(SPI_AUDATA,0xBB81);
	   if( retry++ > 100 )
	   { 
	      break; 
	   }   
   }

   VS1003_WriteReg(SPI_VOL,0x0000);	 /* 音量 */
   VS1003_ResetDecodeTime();     /* 复位解码时间 */	     
   /* 向vs1003发送4个字节无效数据，用以启动SPI发送 */	
   MP3_DCS(0);  /* 选中数据传输 */
   VS1003_SPI_ReadWriteByte(0xFF);
   VS1003_SPI_ReadWriteByte(0xFF);
   VS1003_SPI_ReadWriteByte(0xFF);
   VS1003_SPI_ReadWriteByte(0xFF);
   MP3_DCS(1);  /* 取消数据传输 */
   HAL_Delay(20);
}

void VS1003_Reset(void)
{
   MP3_RESET(0);
   HAL_Delay(20);
   MP3_RESET(1);
   HAL_Delay(20);
   VS1003_SPI_ReadWriteByte(0xFF);
   MP3_DCS(1);              /* 取消数据传输 */
   MP3_CCS(1);              /* 取消数据传输 */
   while(  MP3_DREQ ==0 );  /* 等待DREQ为高 */
   HAL_Delay(20);
}
